# Dylan-Simulator

./: .sublime-project
assets/: base.json
assets/rooms/forest/: geometry.json  map.json
assets/rooms/house/: geometry.json  geometry_old.json
assets/rooms/house_front_yard/: geometry.json  map.json
assets/rooms/house_inverted_yard/: geometry.json  map.json
assets/rooms/lake/: geometry.json
assets/rooms/snow/: map.json
assets/shaders/: outline.frag  pixelate.frag
src/: CMakeLists.txt  Main.cpp
src/characters/include/: Character.h  CharacterAnimation.h  Npc.h  Player.h
src/characters/src/: Character.cpp  CharacterAnimation.cpp  Npc.cpp  Player.cpp
src/combat/: CMakeLists.txt
src/combat/exec_ivan/: IvanMain.cpp
src/combat/exec_jens/: JensMain.cpp
src/combat/lib/include/: Character.h  Combat.h  Enemy.h  Player.h  Projectile.h  UI.h
src/combat/lib/src/: Character.cpp  Combat.cpp  Enemy.cpp  Player.cpp  Projectile.cpp  UI.cpp
src/core/include/: AStar.h  Actor.h  Animation.h  AssetManager.h  Dialogue.h  EntityManager.h  EntityManagerExternal.h  EntityTypes.h  GameManager.h  IEntity.h  PolyAnimation.h  StyledText.h  Utils.h
src/core/src/: AStar.cpp  Actor.cpp  Animation.cpp  AssetManager.cpp  Dialogue.cpp  GameManager.cpp  PolyAnimation.cpp  StyledText.cpp  Utils.cpp
src/environment/include/: Interactable.h  Map.h
src/environment/src/: Interactable.cpp  Map.cpp
src/gauntlet/: CMakeLists.txt  GauntletMain.cpp
src/gauntlet/include/: GauntletCharacter.h  GauntletPlayer.h  GauntletUtils.h
src/gauntlet/src/: GauntletCharacter.cpp  GauntletPlayer.cpp  GauntletUtils.cpp
src/level_editor/: Button.cpp  Button.h  CMakeLists.txt  LevelEditor.cpp
src/overworld_map/include/: Interactable.h  Map.h
src/overworld_map/src/: Interactable.cpp  Map.cpp
